smooth accordion, example on mappe section, known-bug: background jumps

--- a/src/css/less/sections.less
+++ b/src/css/less/sections.less
@@ -69,19 +69,15 @@ body > section {
       padding-top: 2rem;
 }
 
-.accordion a {
-  text-decoration: none;
-}
-
 // p is first not displayed
 .accordion section p {
-      display:none;
+    display:none;
 }
 
-// :target displays p
+/* :target displays p
 .accordion section:target p {
       display: block;
-}
+}*/
 
 .accordion section h4 a{
       display: block;
